# template_PhD_simulator

phd-game-master/: README.md  app.js  package-lock.json  package.json  webpack.config.js
phd-game-master/phd_game_master/: README.md  assets_manifest.json  game.js  index.html  pyproject.toml  requirements-assets.txt
phd-game-master/phd_game_master/assets/audio/bgm/: chiptune_loop
phd-game-master/phd_game_master/docs/: asset_catalog.md
phd-game-master/phd_game_master/src/crew_assets/: agents.py  run_assets.py  tasks.py  tools.py
phd-game-master/phd_game_master/src/phd_game_master/: crew.py  main.py
phd-game-master/src/: app-new.ts  bridgeUI.ts  gameEngine.ts
phd-game-master/static/: index-new.html
