[project]
name = "phd_game_master"
version = "0.1.0"
description = "phd-game-master using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.108.0,<1.0.0"
]

[project.scripts]
phd_game_master = "phd_game_master.main:run"
run_crew = "phd_game_master.main:run"
train = "phd_game_master.main:train"
replay = "phd_game_master.main:replay"
test = "phd_game_master.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
